manifests/gitops/people-app/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: people-postgres
  namespace: ${WORKSHOP_NAMESPACE}
  labels:
    app: people-postgres
    app.kubernetes.io/part-of: people-service
spec:
  selector:
    app: people-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
